# Wolf3D

./: .gitignore  CMakeLists.txt  HomeCMakeLists.txt  Makefile  README.md  SchoolCMakeLists.txt  main.c
files/: example.pgm  texture1.ppm  texture3.ppm
includes/: wolf3d.h
libft/: CMakeLists.txt  HomeCMakeLists.txt  SchoolCMakeLists.txt
sources/: draw.c  ray_casting.c
